<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Selfie Time</string>
    <string name="photo_timestamp">Timestamp</string>
    <string name="photo">Photo</string>
    <string name="action_shoot">Take Photo</string>
    <string name="action_settings">Settings</string>
    <string name="pref_clear_photos">Delete Photos</string>
    <string name="pref_summary_clear_photos">Delete all saved photos</string>
    <string name="capture">Capture</string>
    <string name="pref_summary_shutter_sound">Enable shutter sound</string>
    <string name="pref_shutter_sound">Shutter sound</string>
    <string name="pref_summary_reminder_frequency">How often should the app remind you to take a selfie?</string>
    <string name="pref_reminder_frequency">Reminder Frequency</string>
    <string name="pref_summary_faceframe_size">Position of FaceFrame in Viewfinder</string>
    <string name="pref_faceframe_size">FaceFrame Position</string>
    <string name="using_rear_camera">No face camera: use rear</string>
    <string name="delete">Delete Now</string>
    <string name="cancel">Cancel</string>
    <string name="delete_photos">Do you really want to delete all your selfies??</string>
    <string name="selfie_time_reminder">Selfie Time!</string>
    <string name="start_tip">Tap Camera Icon to get started</string>
</resources>
